--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 <body>
     <h1>our menu</h1>
 <div class="grid-container">   
-    <section class="chicken">
-        <p class="heading">chicken</p>
-        <p>Lorem ipsum dolor sit amet, consectetur 
+    <section id="sect1">
+        <p class="chicken">chicken</p>
+        <p class="text1">Lorem ipsum dolor sit amet, consectetur 
             adipisicing elit. Mollitia maiores at 
             inventore rerum nobis? Nobis iusto 
             atque mollitia est aspernatur autem 
             dolore distinctio. Ut aut ducimus aperiam dicta totam eum.
         </p>
     </section>
-    <section class="beef" >
-        <p class="heading">beef</p>
+    
+    <section id="sect2">
+        <p class="beef">beef</p>
         
-        <p class="lightred">
+        <p class="text2">
             Lorem ipsum, dolor sit amet consectetur 
             adipisicing elit. Officiis voluptates dolores
              minus eaque culpa veritatis accusamus sequi 
@@ -30,9 +31,9 @@
              nemo quisquam rerum vero recusandae quo. Sapiente, hic?
         </p>
     </section>
-    <section class="item">
-        <p class="heading">sushi</p>
-        <p>
+    <section id="sect3">
+        <p class="sushi">sushi</p>
+        <p class="text3">
             Lorem ipsum dolor sit amet consectetur adipisicing 
             elit. Sit iure eligendi, error quas rerum voluptatum 
             tempora soluta neque doloremque eius iste consequatur
