--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, intiale-scale=1">
     <title>assignememt solution for module 2</title>
-    <link rel="stylesheet" href="../module2/one.css">
+    <link rel="stylesheet" href="../module2/css/one.css">
    </head>
 <body>
     <h1>our menu</h1>
